tests/neg/i9437.check
-- [E050] Type Error: tests/neg/i9437.scala:7:10 -----------------------------------------------------------------------
7 |  println(x.f1())  // error
  |          ^^^^
  |          method selectDynamic in trait Selectable does not take parameters
  |
  | longer explanation available when compiling with `-explain`
